# sandbox

cdn_access_restriction/: docker-compose.yml
cdn_access_restriction/cdn/: Dockerfile  nginx.conf  restrict.lua
cdn_access_restriction/client/: index.html
docker_fluentd_mongodb/: docker-compose.yml
docker_fluentd_mongodb/app/: Dockerfile  nginx.conf
docker_fluentd_mongodb/fluentd/: Dockerfile  fluent.conf
docker_fluentd_mongodb/influxdb/: Dockerfile  influxdb.conf  metrics.iql
docker_fluentd_mongodb/mongodb/: Dockerfile  mongod.conf
docker_fluentd_mongodb/telegraf/: Dockerfile  telegraf.conf
docker_swarm/: README.md  docker-stack.yml
docker_swarm/master/: nginx.conf
docker_swarm/slave/: Dockerfile  nginx.conf
dockerized_symfony/: .env  README.md  docker-compose.yml
dockerized_symfony/app/: .dockerignore  .gitignore  Dockerfile  README.md  composer.json  php.ini
dockerized_symfony/app/web/: app.php
dockerized_symfony/web/: Dockerfile  nginx.conf
nginx_image_processing/: README.md  docker-compose.yml
nginx_image_processing/cache/: Dockerfile
nginx_image_processing/resizer/: Dockerfile  nginx.conf  resize.lua
nginx_image_processing/resizer/conf/: nginx.conf  redis_resize.lua  resize.lua
nginx_image_processing/resizer/uploaded/: test
nginx_image_processing/web/: Dockerfile  nginx.conf
rust_cmake_bindgen/: .gitlab-ci.yml  Cargo.toml
rust_cmake_bindgen/cgal/: Cargo.toml  build.rs  wrapper.hpp
rust_cmake_bindgen/cgal/capi/: CMakeLists.txt  x_monotone_curve.cpp  x_monotone_curve.h
rust_cmake_bindgen/src/: main.rs
(+2 files in other folders)
